The security aspect has been implemented in the application, and various role types have been introduced. A bug related to the addition of the default anonymous user in the AnonymousAuthenticationFilter was identified and fixed, replacing the existing user.